Split Resolver and TypeInvoker implementation (#164)